# turtle_app

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  DockerfileFastapi  HOME_THEATER_ARCHITECTURE.md  IMPROVEMENTS.md  LIBRARY_ENHANCEMENT_PLAN.md  README.md  SUBTITLE_INTEGRATION_PLAN.md  docker-compose.yml  langgraph.json  mcp-integration-design-principles.md  mcp-integration-migration-plan-v2.md  mcp-integration-plan.md  pyproject.toml  readme.md  run_tests.py  run_tests.sh  search_rabbit.py
.claude/: settings.local.json
.github/workflows/: docker-image.yml  main.yml
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_ops.pckl
app/: graph.py
client/: caller.py
data_pipeline/scrapers/: qbittorrent_api_scraper.py
init_resource/: create_evaluations.py  pinecone_upload_db.py  scrap_qbitorrent_api.py
init_resource/eval_data/: data_qa.py
init_resource/rag_data/: plot_summaries_sample.csv
mcp-servers/qbittorrent-mcp/: CLAUDE.md  Dockerfile  README.md  main.py  mcp-integration-migration-plan.md  pyproject.toml  qbittorrent-mcp-server-plan.md
mcp-servers/qbittorrent-mcp/src/mcp_qbittorrent/: server.py
mcp-servers/qbittorrent-mcp/src/mcp_qbittorrent/clients/: qbittorrent_client.py
mcp-servers/qbittorrent-mcp/src/mcp_qbittorrent/tools/: qbittorrent_tools.py
mcp-servers/qbittorrent-mcp/tests/: conftest.py  test_integration.py  test_qbittorrent_client.py
mcp-servers/qbittorrent-mcp/tests/integration/: test_qbittorrent_integration.py
mcp-servers/qbittorrent-mcp/tests/unit/: test_client.py
sandbox/: call_torrent.py  caller2.py  experimental_coder.py  sandbox.py
src/application/agents/: __init__.py  nodes.py  supervisor.py  tool_agent.py
src/application/agents/prompts/: __init__.py  agents.py  supervisor.py
src/application/workflows/: graph.py
src/core/utils/: __init__.py  error_handler.py  log_handler.py  memory_utils.py  movie_names.py
src/infrastructure/config/: settings.py
src/infrastructure/llm/: factory.py
src/infrastructure/mcp/client/: tools.py
src/infrastructure/mcp/server/: server.py
src/infrastructure/mcp/server/clients/: qbittorrent_client.py
src/infrastructure/mcp/server/models/: schemas.py
src/infrastructure/mcp/server/tools/: qbittorrent_tools.py
src/infrastructure/smb/: library_manager.py
src/infrastructure/subtitles/: subtitle_manager.py  subtitle_tools.py
src/infrastructure/vector_store/: pinecone_retriever.py
src/infrastructure/vector_store/data_pipeline/: loader.py  manager.py  upload_script.py
src/interface/api/: app.py  routes.py  schemas.py
src/interface/cli/: server.py
src/notebooks/: turtle_app_graph_test.ipynb  turtle_app_showcase.ipynb
src/tests/application/: test_agent_mcp.py  test_graph_mcp.py  test_graph_workflow.py
src/tests/infrastructure/: test_library_manager.py  test_mcp_integration.py
src/tests/interface/: test_api_endpoints.py
tests/: test_retriver.py
tests/infrastructure/: test_retriever.py
tests/infrastructure/mcp/: conftest.py  fixtures.py  test_integration.py  test_qbittorrent_client.py
tests/infrastructure/mcp/integration/: test_qbittorrent_integration.py
tests/infrastructure/mcp/unit/: test_client.py
turtleapp/: api_app.py  app.py  configuration.py  graph.py  settings.py
turtleapp/api/client/: caller.py
turtleapp/api/routes/: endpoints.py
turtleapp/api/static/: app.js  index.html  styles.css
turtleapp/config/: settings.py
turtleapp/core/agents/: base.py
turtleapp/data_pipeline/: config.py
turtleapp/data_pipeline/evaluation/: dataset_creator.py
turtleapp/data_pipeline/vector_store/: pinecone_uploader.py  upload_script.py  uploader.py  vector_store_manager.py
turtleapp/mcp-migration/: MIGRATION_PLAN.md  README.md
turtleapp/mcp-migration/client-integration/: sync_mcp_client.py
turtleapp/mcp-migration/docs/: api-integration-example.py
turtleapp/mcp-migration/server-examples/: turtle-server.py
turtleapp/mcp-migration/testing/: test_mcp_integration.py
turtleapp/src/: constants.py
turtleapp/src/core/: llm_factory.py  subtitle_manager.py
turtleapp/src/core/agents/: base.py
turtleapp/src/core/mcp/: __init__.py  config.py  tools.py
turtleapp/src/core/nodes/: __init__.py  agents.py  supervisor.py
turtleapp/src/core/prompts/: __init__.py  agents.py  supervisor.py
turtleapp/src/core/tools/: README.md  __init__.py  library_manager.py  movie_scanner.py  movie_summaries_retriever.py  random_number_gen.py  retriver_movie_summeries.py  subtitle_tools.py  tools_torrent.py  torrent_tools.py
turtleapp/src/data_pipeline/vector_store/: upload_script.py  vector_store_manager.py
turtleapp/src/mcp/client/: tools.py
turtleapp/src/mcp/server/: config.py  server.py
turtleapp/src/mcp/server/clients/: qbittorrent_client.py
turtleapp/src/mcp/server/models/: schemas.py
turtleapp/src/mcp/server/tools/: qbittorrent_tools.py
turtleapp/src/nodes/: __init__.py  agents.py  supervisor.py
turtleapp/src/tools/: random_number_gen.py  retriver_movie_summeries.py  tools_torrent.py
turtleapp/src/utils/: __init__.py  error_handler.py  log_handler.py  memory_utils.py  movie_names.py
turtleapp/src/workflows/: graph.py
turtleapp/tests/: README.md  conftest.py  test_agent_mcp.py  test_api_endpoints.py  test_graph_mcp.py  test_graph_workflow.py  test_library_manager.py  test_mcp_integration.py  test_movie_scanner.py  test_retriever.py  test_retriver.py  test_torrent.py
turtleapp/tests/mcp/: test_integration.py  test_qbittorrent_client.py
turtleapp/tests/mcp/integration/: test_qbittorrent_integration.py
turtleapp/tests/mcp/unit/: test_client.py
turtleapp/workflows/: graph.py  state.py
