[project]
name = "turtleapp"
version = "0.1.0"
description = ""
authors = [
    {name = "Elisar Chodorov", email = "elisarchod@gmail.com"},
]
requires-python = ">=3.11,<3.13"
dependencies = [
    "python-dotenv>=1.0.1",
    "langgraph>=0.2.53",
    "langsmith>=0.3.45",
    "langchain-pinecone>=0.2.0",
    "langchain-openai>=0.2.11",
    "langchain-anthropic>=0.3.17",
    "langgraph-cli[inmem]>=0.1.65",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "fastapi>=0.115.6",
    "uvicorn>=0.35.0",
    "smbprotocol>=1.14.0",
    "duckdb>=0.9.0",
    "langchain>=0.3.26",
    "langchain-mcp-adapters>=0.1.11",
    "requests>=2.31.0",
    "fastmcp>=2.12.4",
    "aiohttp>=3.12.15",
    "httpx>=0.27.0",
]

[project.scripts]
turtle-app-server = "interface.cli.server:main"
turtle-mcp-server = "infrastructure.mcp.server.server:run_server"

[project.optional-dependencies]
mcp = [
    "fastmcp>=2.12.4",
    "httpx>=0.27.0",
    "aiohttp>=3.12.15",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.1",
    "requests>=2.31.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.0.0",
    "aioresponses>=0.7.0",
]
dev = [
    "jupyter>=1.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/application", "src/core", "src/infrastructure", "src/interface"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = ["-v", "--color=yes", "--log-cli-level=INFO"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "expensive: marks tests that use real LLM calls (deselect with '-m \"not expensive\"')",
    "integration: marks tests requiring live external services (deselect with '-m \"not integration\"')",
]
