[project]
name = "turtleapp-qbittorrent-mcp"
version = "0.1.0"
description = "FastMCP-based Model Context Protocol server for qBittorrent Web API (Turtle App integration)"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "aiohttp>=3.12.15",
    "fastmcp>=2.12.4",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.11.0",
]


[project.scripts]
mcp-qbittorrent = "mcp_qbittorrent.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_qbittorrent"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "fastmcp.*"
ignore_missing_imports = true


[dependency-groups]
dev = [
    "aioresponses>=0.7.8",
    "mypy>=1.8.0",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=4.1.0",
    "pytest>=8.4.2",
    "ruff>=0.3.0",
]
